# SIM-LAB

./: .gitignore  README.md
authoring/: README.md
authoring/blender/: README.md
configs/: README.md
configs/areas/: chengdu_scu_jiangan_core.json  example_shanghai_people_square.json
configs/enhancements/: chengdu_scu_jiangan_manual_semantics_v1.local.json  chengdu_scu_jiangan_manual_semantics_v1.template.local.json
configs/overlays/: chengdu_scu_jiangan_campus_core_v1.local.json
configs/references/: chengdu_scu_jiangan_core_tdt_img_cia_z17.local.json  chengdu_scu_jiangan_core_tdt_reference.template.local.json
data/: README.md
data/research/: README.md
docs/: asset-inventory.md  cv-space-topology-and-tooling.md  data-model-and-schemas.md  data-sources-and-asset-pipeline.md  domestic-data-sources-and-local-research.md  frozen-baseline.md  idea.md  implementation-plan.md  precision-enhancement-phase1.md  tech-stack-and-architecture.md
image/cv/: README.md
pipeline/: README.md  pyproject.toml
pipeline/src/urban_sim_lab_pipeline/: __init__.py  audit.py  cli.py  clip.py  config.py  geo.py  imagery.py  normalize.py  osm.py  overlay.py  preview.py  research.py  runtime_pack.py  serialization.py  validation.py
runtime/: README.md
runtime/godot/: README.md  project.godot
scenarios/: README.md  chengdu_scu_jiangan_core_outbreak_mvp.json  example_street_block_outbreak.json
schemas/: README.md
schemas/json/: buildings.schema.json  nav-graph.schema.json  normalized-city.schema.json  props.schema.json  runtime-pack-manifest.schema.json  world.schema.json  (+2 more)
(+18 files in other folders)
