[project]
name = "urban-sim-lab-pipeline"
version = "0.1.0"
description = "Offline city compilation pipeline for Urban Sim Lab."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "geopandas>=1.0.0",
  "networkx>=3.3",
  "osmnx>=2.0.0",
  "pandas>=2.2.0",
  "pydantic>=2.7.0",
  "pyproj>=3.6.0",
  "rasterio>=1.3.0",
  "shapely>=2.0.0",
]

[project.scripts]
urban-sim-lab-pipeline = "urban_sim_lab_pipeline.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
